# alloy-sub-operator

./: DEVELOPING.md  Makefile  README.md  charmcraft.yaml  notes.txt  pyproject.toml  redeploy.sh  requirements.txt  tox.ini
.github/workflows/: charm-tests.yml  release.yml
docs/: charm-architecture.md
docs/superpowers/plans/: 2026-04-18-alloy-sub-implementation.md
docs/superpowers/specs/: 2026-04-18-alloy-sub-design.md
src/: __init__.py  alloy.py  charm.py  config_builder.py  custom_args.py  machine_observability.py  observability_relation.py  observability_types.py  principal_context.py  prometheus_remote_write_extensions.py  relation_metadata.py
templates/: config.alloy.j2
tests/integration/: test_charm.py
tests/unit/: test_charm.py  test_config_builder.py  test_custom_args.py  test_metrics_translation.py  test_observability_relation.py  test_remote_write_relation.py  test_repo_baseline.py
